v6.5
-----
: Fixed a bug where Metacritic scores would sometimes show incorrectly
: Fixed a bug that caused achievement sorting not to work correctly
: Fixed active market listing total to work with new data format
: Updated highlighting code to be more robust


v6.4
-----
+ Added a progress bar to the header that indicates if Enhanced Steam is processing requests
+ Added a "lightbox" effect to app page screenshots
+ Added a list of friends that own a game on the "friends that play" page
+ Increased Early Access detection speed (thanks henryg!)
: Fixed the number of API requests to conform with Valve's throttling limits
: Fixed a bug that caused PCGamingWiki links not to show correctly
: Fixed a bug where sometimes the altered greenlight banner would not show correctly

v6.3.5
-----
+ Added platform icons to the summer sale homepage
: Fixed scoreboard scaling to account for live updates

v6.3.4
-----
+ Rewrote regional price comparision to increase speed and pull data from our own API server

v6.3.3
-----
- Removed a feature that caused many people's wishlist to load slowly

v6.3.2
-----
+ Added Early Access banners to Summer Sale homepage
+ Added ability to sort Summer Sale team rankings to scale
: Fixed a bug where scrolling on the home page would cause items not to highlight correctly

v6.3.1
-----
+ Buy orders will now be totaled on the market homepage
+ Added highlighting to the homepage of the Steam Summer Sale
: Fixed a bug where active marketplace totals were incorrect for some currencies

v6.3
-----
+ Added an information dialog to app pages that are excluded from Family Sharing
+ Steam user review scores are now loaded more quickly
: Multiple DRM warnings now display in a single warning banner
: Fixed a bug where some market links were not showing up on certain badge pages
: Fixed several bugs caused by Valve's CDN name change

v6.2.1
-----
+ Added inventory market data to other user's inventories
+ Added avg price of 3 cards to booster packs in inventory