@@ -4,6 +4,7 @@ v6.5
 : Fixed a bug that caused achievement sorting not to work correctly
 : Fixed active market listing total to work with new data format
 : Updated highlighting code to be more robust
+- Removed button to deleted owned games from wishlist, as Steam now does this automatically
 
 
 v6.4
